[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/tower.gd" type="Script" id=1]

[node name="TowerTemplate" type="Area2D"]
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
centered = false

[node name="Tower" type="Sprite" parent="."]
position = Vector2( 32, 32 )

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="on_tower_area_entered"]
[connection signal="area_exited" from="." to="." method="on_tower_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="on_attack_timer_timeout"]
